@@ -9,6 +9,7 @@ Additions:
     * Add EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN
     * Add edje_codegen - A code generator to working with edje files.
     * Add more tags(preedit_sub1~4) for a variety of preediting states.
+    * Add embryo function get_image_id
 
 Improvements:
     * Change Edje to use Eo.
